--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,18 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-
+    <div id="gameOne">
+     <div class="rowGameOne">
+      <div class="square" onClick="greenTest()"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="rowGameOne">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+  <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/main.js"></script>
   </body>
 </html>
