basic algoryth for game pattern built still needs work

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+.playBtn {
+font-size: 2em;
+padding: 5px;
+}
+
 .rowGameOne {
   padding-left: 4vw;
 /*  background-color: red;*/
