--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Play</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div id="gameOne">
-     <div class="rowGameOne">
-      <div class="square" onClick="greenTest()"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-    </div>
-    <div class="rowGameOne">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-    </div>
+  <button class="playBtn" href="./computer">Play Now</button>
+
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
   </body>
