basic structure added to game algorythm added to

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  <button class="playBtn" href="./computer">Play Now</button>
+  <a class="playBtn" href="/computer">Go to game</a>
+
+
 
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
