--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,3 +20,19 @@ padding: 5px;
   display: inline-block;
 }
 
+#countdown {
+  margin:10vh 0 0 25vw;
+  position: absolute;
+  height: 50vh;
+  width: 50vh;
+  background-color: #ebebeb;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
