--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -5,17 +5,22 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <div id="countdown" class="show"></div>
     <div id="gameOne">
      <div class="rowGameOne">
-      <div id="one" class="square" onClick="greenTest(one)"></div>
-      <div id="two" class="square" onClick="greenTest(two)"></div>
-      <div id="three" class="square" onClick="greenTest(three)"></div>
+      <div id="one" class="square"></div>
+      <div id="two" class="square"></div>
+      <div id="three" class="square"></div>
     </div>
     <div class="rowGameOne">
-      <div id="four" class="square" onClick="greenTest(four)"></div>
-      <div id="five" class="square" onClick="greenTest(five)"></div>
-      <div id="six" class="square" onClick="greenTest(six)"></div>
+      <div id="four" class="square""></div>
+      <div id="five" class="square"></div>
+      <div id="six" class="square"></div>
     </div>
+    <a href="/">Home</a>
+    <a href="#" onclick="countdown()">Play Now</a>
+    <div>time left:</div><div id="gameTime"></div>
+    <div id="score"></div>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
   </body>
