ports open and starting with iphone interaction

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,10 @@ padding: 5px;
   display: none;
 }
 
+.pSquare {
+  height:50vh;
+  width:32.5vw;
+  background-color: #000;
+  display: inline-block;
+}
+
