--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 
 
 
+  <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
   </body>
