--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -21,6 +21,7 @@
     <a href="#" onclick="countdown()">Play Now</a>
     <div>time left:</div><div id="gameTime"></div>
     <div id="score"></div>
+    <div id="test"></div>
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
