--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -8,15 +8,16 @@
   </head>
   <body>
      <div class="rowGame">
-      <div id="pOne" class="pSquare" onclick="test('pOne')"></div>
-      <div id="pTwo" class="pSquare" onclick="test('pTwo')"></div>
-      <div id="pThree" class="pSquare" onclick="test('pThree')"></div>
+      <div id="pOne" class="pSquare" onclick="move('one')"></div>
+      <div id="pTwo" class="pSquare" onclick="move('two')"></div>
+      <div id="pThree" class="pSquare" onclick="move('three')"></div>
     </div>
     <div class="rowGame">
-      <div id="pFour" class="pSquare" onclick="test('pFour')"></div>
-      <div id="pFive" class="pSquare" onclick="test('pFive')"></div>
-      <div id="pSix" class="pSquare" onclick="test('pSix')"></div>
+      <div id="pFour" class="pSquare" onclick="move('four')"></div>
+      <div id="pFive" class="pSquare" onclick="move('five')"></div>
+      <div id="pSix" class="pSquare" onclick="move('six')"></div>
     </div>
+
 
 
 
