--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -8,14 +8,14 @@
   </head>
   <body>
      <div class="rowGame">
-      <div id="pOne" class="pSquare" onclick="move('one')"></div>
-      <div id="pTwo" class="pSquare" onclick="move('two')"></div>
-      <div id="pThree" class="pSquare" onclick="move('three')"></div>
+      <div id="pOne" class="pSquare" ontouchend="this.onclick=fix" onclick="move('one')"></div>
+      <div id="pTwo" class="pSquare" ontouchend="this.onclick=fix" onclick="move('two')"></div>
+      <div id="pThree" class="pSquare" ontouchend="this.onclick=fix" onclick="move('three')"></div>
     </div>
     <div class="rowGame">
-      <div id="pFour" class="pSquare" onclick="move('four')"></div>
-      <div id="pFive" class="pSquare" onclick="move('five')"></div>
-      <div id="pSix" class="pSquare" onclick="move('six')"></div>
+      <div id="pFour" class="pSquare" ontouchend="this.onclick=fix" onclick="move('four')"></div>
+      <div id="pFive" class="pSquare" ontouchend="this.onclick=fix" onclick="move('five')"></div>
+      <div id="pSix" class="pSquare" ontouchend="this.onclick=fix" onclick="move('six')"></div>
     </div>
 
 
