--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -20,7 +20,7 @@
 
 
 
-
+  <script>window.scrollTo(0,1);</script>
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
