right and wrong feature added

--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -19,9 +19,11 @@
     </div>
     <a href="/">Home</a>
     <a href="#" onclick="countdown()">Play Now</a>
-    <div>time left:</div><div id="gameTime"></div>
-    <div id="score"></div>
-    <div id="test"></div>
+    <div>time left:<div id="gameTime"></div></div>
+    <div>score<div id="score"></div></div>
+
+    <div>right:<div id="right"></div></div>
+    <div>wrong:<div id="wrong"></div></div>
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
