more tests for live

--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -18,7 +18,7 @@
       <div id="six" class="square"></div>
     </div>
     <a href="/">Home</a>
-    <a href="#" onclick="countdown(); accel();">Play Now</a>
+    <a href="#" onclick="countdown();">Play Now</a>
     <div>time left:<div id="gameTime"></div></div>
     <div>score<div id="score"></div></div>
 
