--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -24,6 +24,7 @@
 
     <div>right:<div id="right"></div></div>
     <div>wrong:<div id="wrong"></div></div>
+    <div>test:<div id="test"></div></div>
 
     <div id="yes"> 
         <div class="box" id="accel">
