--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -5,10 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div id="countdown" class="show"></div>
+<!--     <div id="countdown" class="show"></div> -->
     <div id="gameOne">
      <div class="rowGameOne">
-      <div id="one" class="square"></div>
+      <div id="one" class="square rotate"></div>
       <div id="two" class="square"></div>
       <div id="three" class="square"></div>
     </div>
@@ -21,10 +21,9 @@
     <a href="#" onclick="gameOne();">Play Now</a>
     <div>time left:<div id="gameTime"></div></div>
     <div>score<div id="score"></div></div>
-
     <div>right:<div id="right"></div></div>
     <div>wrong:<div id="wrong"></div></div>
-    <div>test:<div id="test"></div></div>
+
 
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
