--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -8,7 +8,7 @@
 <!--     <div id="countdown" class="show"></div> -->
     <div id="gameOne">
      <div class="rowGameOne">
-      <div id="one" class="square rotate"></div>
+      <div id="one" class="square rotateX"></div>
       <div id="two" class="square"></div>
       <div id="three" class="square"></div>
     </div>
