--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Phone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
