--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+
+  -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
-.playBtn {
+/*.playBtn {
 font-size: 2em;
 padding: 5px;
 }
 
 .rowGameOne {
   padding-left: 4vw;
-/*  background-color: red;*/
+ background-color: red;
 }
 
 .square {
@@ -23,18 +27,18 @@ padding: 5px;
 .rotateX {
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
-/*  transform: rotateX(0deg);
+  transform: rotateX(0deg);
   transform: rotateY(0deg);
-/*  transform: rotateZ(0deg);*/
+  transform: rotateZ(0deg);
     transform: rotate3d(0,0,0,0deg);
 }
 
-/*.rotateY {
+.rotateY {
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   transform: rotateY(0deg);
   transform: rotateZ(0deg);
-}*/
+}
 
 
 #countdown {
@@ -58,5 +62,88 @@ padding: 5px;
   width:32.5vw;
   background-color: #000;
   display: inline-block;
-}
+}*/
+
+
+
+
+
+
+ 
+         /*body
+         {
+            max-width: 500px;
+            margin: 2em auto;
+            padding: 0 0.5em;
+            font-size: 20px;
+         }
+ 
+         h1
+         {
+            text-align: center;
+         }
+ 
+         .hidden
+         {
+            display: none;
+         }*/
+
+        .cube
+         {
+            width: 150px;
+            height: 150px;
+            position: relative;
+            margin: 30px auto;
+            -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+         }
+ 
+         .face
+         {
+            width: 150px;
+            height: 150px;
+            position: absolute;
+            font-size: 80px;
+            text-align: center;
+            line-height: 150px;
+            background-color: #999999;
+            box-shadow: inset 0 0 20px #333333;
+            opacity: 0.6;
+         }
+ 
+         .cube .one
+         {
+            -webkit-transform: translateZ(75px);
+            transform: translateZ(75px);
+         }
+ 
+         .cube .two
+         {
+            -webkit-transform: rotateY(90deg) translateZ(75px);
+            transform: rotateY(90deg) translateZ(75px);
+         }
+ 
+         .cube .three
+         {
+            -webkit-transform: rotateY(180deg) translateZ(75px);
+            transform: rotateY(180deg) translateZ(75px);
+         }
+ 
+         .cube .four
+         {
+            -webkit-transform: rotateY(-90deg) translateZ(75px);
+            transform: rotateY(-90deg) translateZ(75px);
+         }
+ 
+         .cube .five
+         {
+            -webkit-transform: rotateX(90deg) translateZ(75px);
+            transform: rotateX(90deg) translateZ(75px);
+         }
+ 
+         .cube .six
+         {
+            -webkit-transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
+            transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
+         }
 
