--- a/views/computer.ejs
+++ b/views/computer.ejs
@@ -6,6 +6,36 @@
   </head>
   <body>
 <!--     <div id="countdown" class="show"></div> -->
+    
+         <div id="do-results">
+         <div id="cube" class="cube">
+            <div class="face one">1</div>
+            <div class="face two">2</div>
+            <div class="face three">3</div>
+            <div class="face four">4</div>
+            <div class="face five">5</div>
+            <div class="face six">6</div>
+         </div>
+
+                  <div id="cube1" class="cube">
+            <div class="face one">1</div>
+            <div class="face two">2</div>
+            <div class="face three">3</div>
+            <div class="face four">4</div>
+            <div class="face five">5</div>
+            <div class="face six">6</div>
+         </div>
+
+                  <div id="cube2" class="cube">
+            <div class="face one">1</div>
+            <div class="face two">2</div>
+            <div class="face three">3</div>
+            <div class="face four">4</div>
+            <div class="face five">5</div>
+            <div class="face six">6</div>
+         </div>
+
+
     <div id="gameOne">
      <div class="rowGameOne">
       <div id="one" class="square rotateX"></div>
