--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,68 @@
   <head>
     <title>Play</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/nav.css' />
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css"">
+<link href='https://fonts.googleapis.com/css?family=Ubuntu:700|Vollkorn' rel='stylesheet' type='text/css'>
   </head>
   <body>
+  <nav id="main-nav">
+      <div id="logo-container">
+      <a class="logo">HEC</a>
+      </div>
+        <div id="links-container">
+        <ul>
+          <li><a href="#" ontouchend="this.onclick=fix">About</a></li>
+          <li><a href="#" ontouchend="this.onclick=fix">Portfilio</a></li>
+          <li><a href="#" ontouchend="this.onclick=fix">Blog</a></li>
+        </ul>
+      </div>
+      <div id="social-links-container">
+        <ul>
+          <li><a href="#" ontouchend="this.onclick=fix"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="#" ontouchend="this.onclick=fix"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> 
+        </ul>  
+      </div>
+      <div id="mobile-button-container">
+        <a ontouchend="this.onclick=fix"><i id="bars" class="fa fa-bars" aria-hidden="true"></i>      
+      </div>
+  </nav>
+  <nav id="mobile-nav">
+    <ul id="mobile-links">
+      <li><a href="#" ontouchend="this.onclick=fix">About</a></li>
+      <li><a href="#" ontouchend="this.onclick=fix">Portfilio</a></li>
+      <li><a href="#" ontouchend="this.onclick=fix">Blog</a></li>
+      <li>
+        <ul id="mobile-social-links">
+          <li><a href="#" ontouchend="this.onclick=fix"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="#" ontouchend="this.onclick=fix"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+<!-- ***** End Nav *****  --> 
+  <div class="banner">
+    <div class="goToGames"><a href="/games">Games Library</br><span class="clickContinue">click to continue</span></a></div>
+  </div>
+  <div id="latestGames">
+  <h1>Latest Games</h1>
+    <div class="gameDisplay"></div>
+    <div class="gameDisplay"></div>
+    <div class="gameDisplay"></div>
+  </div>
+
+
+
+
   <a class="playBtn" href="/computer">Go to game</a>
 
 
 
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
+
+  <script type="text/javascript" src="javascripts/nav.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
+
   </body>
 </html>
