--- a/views/games.ejs
+++ b/views/games.ejs
@@ -47,8 +47,10 @@
     <h1>Games</h1>
     <div class="gameListDisplay">
       <div class="gameListPic"></div>
-      <div class="gameListDescription"></div>
-      
+      <div class="gameListDescription">
+      <div class="gameListText">blah blah blah blah blah blah blah blah blah blah blah blah blah blah </div>
+      <a href="/rotating-cubes" class="goToGame">Play Now</a></div>
+
     </div>
 
     <div class="gameListDisplay"><div class="gameListPic"></div></div>
@@ -65,6 +67,7 @@
 
   <script type="text/javascript" src="javascripts/nav.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
+  
 
   </body>
 </html>
