--- a/public/stylesheets/rotatingCubes.css
+++ b/public/stylesheets/rotatingCubes.css
@@ -48,138 +48,69 @@ p {
   font-size:20vh;
 }
 
-/*
-
-.rowGameOne {
-  padding-left: 4vw;
- background-color: red;
-}
-
-.square {
-  height: 30vw;
-  width: 30vw;
-  background-color: #000;
-  display: inline-block;
-}
-
-.rotateX {
-  -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-  transform: rotateX(0deg);
-  transform: rotateY(0deg);
-  transform: rotateZ(0deg);
-    transform: rotate3d(0,0,0,0deg);
-}
-
-.rotateY {
-  -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-  transform: rotateY(0deg);
-  transform: rotateZ(0deg);
-}
-
-
-
-
-.show {
-  display: block;
-}
-
-.hide {
-  display: none;
-}
-
-.pSquare {
-  height:50vh;
-  width:32.5vw;
-  background-color: #000;
-  display: inline-block;
-}*/
-
-
-
-
-
-
- 
-         /*body
-         {
-            max-width: 500px;
-            margin: 2em auto;
-            padding: 0 0.5em;
-            font-size: 20px;
-         }
- 
-         h1
-         {
-            text-align: center;
-         }
- 
-         .hidden
-         {
-            display: none;
-         }*/
 .container {
   display: inline-block;
   padding: 10vw 0 0 8%;
+} 
+        
+.cube {
+  width: 20vw;
+  height: 20vw;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  float: left;
+  margin:3vw;
 }
-        .cube
-         {
-            width: 20vw;
-            height: 20vw;
-            position: relative;
-            -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            float: left;
-            margin:3vw;
-         }
  
-         .face
-         {
-            width: 20vw;
-            height: 20vw;
-            position: absolute;
-            font-size: 80px;
-            text-align: center;
-            line-height: 20vw;
-            background-color: #999999;
-            box-shadow: inset 0 0 20px #333333;
-            opacity: 0.6;
-         }
+.face {
+  width: 20vw;
+  height: 20vw;
+  position: absolute;
+  font-size: 80px;
+  text-align: center;
+  line-height: 20vw;
+  background-color: #999999;
+  box-shadow: inset 0 0 20px #333333;
+  opacity: 0.6;
+}
  
-         .cube .one
-         {
-            -webkit-transform: translateZ(75px);
-            transform: translateZ(75px);
-         }
+.cube .one {
+  -webkit-transform: translateZ(75px);
+  transform: translateZ(75px);
+}
  
-         .cube .two
-         {
-            -webkit-transform: rotateY(90deg) translateZ(75px);
-            transform: rotateY(90deg) translateZ(75px);
-         }
+.cube .two {
+  -webkit-transform: rotateY(90deg) translateZ(75px);
+  transform: rotateY(90deg) translateZ(75px);
+}
+
+.cube .three {
+  -webkit-transform: rotateY(180deg) translateZ(75px);
+  transform: rotateY(180deg) translateZ(75px);
+}
  
-         .cube .three
-         {
-            -webkit-transform: rotateY(180deg) translateZ(75px);
-            transform: rotateY(180deg) translateZ(75px);
-         }
+.cube .four {
+  -webkit-transform: rotateY(-90deg) translateZ(75px);
+  transform: rotateY(-90deg) translateZ(75px);
+}
  
-         .cube .four
-         {
-            -webkit-transform: rotateY(-90deg) translateZ(75px);
-            transform: rotateY(-90deg) translateZ(75px);
-         }
- 
-         .cube .five
-         {
-            -webkit-transform: rotateX(90deg) translateZ(75px);
-            transform: rotateX(90deg) translateZ(75px);
-         }
- 
-         .cube .six
-         {
-            -webkit-transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
-            transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
-         }
+.cube .five {
+  -webkit-transform: rotateX(90deg) translateZ(75px);
+  transform: rotateX(90deg) translateZ(75px);
+}
+
+.cube .six {
+  -webkit-transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
+  transform: rotateX(-90deg) translateZ(75px) rotate(0deg);
+}
+
+/*********** phone ***********/
+
+.pSquare {
+height: 50vh;
+width: 32.5vw;
+background-color: #000;
+display: inline-block;
+}
 
