--- a/views/rotatingCubesPhone.ejs
+++ b/views/rotatingCubesPhone.ejs
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/rotatingCubes.css' />
   </head>
   <body>
      <div class="rowGame">
-      <div id="pOne" class="pSquare"  onclick="move('one')"></div>
-      <div id="pTwo" class="pSquare" onclick="move('two')"></div>
-      <div id="pThree" class="pSquare"  onclick="move('three')"></div>
+      <div id="pOne" class="pSquare"  onclick="move('cubeOne')"></div>
+      <div id="pTwo" class="pSquare" onclick="move('cubeTwo')"></div>
+      <div id="pThree" class="pSquare"  onclick="move('cubeThree')"></div>
     </div>
     <div class="rowGame">
-      <div id="pFour" class="pSquare"  onclick="move('four')"></div>
-      <div id="pFive" class="pSquare"  onclick="move('five')"></div>
-      <div id="pSix" class="pSquare"  onclick="move('six')"></div>
+      <div id="pFour" class="pSquare"  onclick="move('cubeFour')"></div>
+      <div id="pFive" class="pSquare"  onclick="move('cubeFive')"></div>
+      <div id="pSix" class="pSquare"  onclick="move('cubeSix')"></div>
     </div>
 
 
