--- a/views/rotatingCubes.ejs
+++ b/views/rotatingCubes.ejs
@@ -24,55 +24,55 @@
          
         <div class="container">
           <div id="cubeOne" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
           </div>
           <div id="cubeTwo" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
           </div>
           <div id="cubeThree" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
           </div>
         </div>
 
         <div class="container">
           <div id="cubeFour" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
           </div>
           <div id="cubeFive" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
           </div>
           <div id="cubeSix" class="cube">
-            <div class="face one">1</div>
-            <div class="face two">2</div>
-            <div class="face three">3</div>
-            <div class="face four">4</div>
-            <div class="face five">5</div>
-            <div class="face six">6</div>
+            <div class="face one"></div>
+            <div class="face two"></div>
+            <div class="face three"></div>
+            <div class="face four"></div>
+            <div class="face five"></div>
+            <div class="face six"></div>
          </div>
         </div>
         </div>
