working on 2 player integration

--- a/views/rotatingCubesPlayer1.ejs
+++ b/views/rotatingCubesPlayer1.ejs
@@ -8,18 +8,29 @@
     <div id="openingScreen">
       <div class="title">
         <h1>Rotating Cubes</h1>
-        <div id="qrcode" class="qrcode"></div>
+        <h2>Player 1</h2>
+        <div id="qrcode1" class="qrcode"></div>
         <div id="webAddress"></div><br>
         <div> Either use qr code or go to link on your phone. Then press start</div>
-        <button onclick="gameOne()">Start</button> 
+      </div>
+      <h2>Player 2</h2>
+      <div id="qrcode2" class="qrcode"></div>
+        <div id="webAddress"></div><br>
+        <div> Either use qr code or go to link on your phone. Then press start</div>
+        <button onclick="gameOne()">Start</button>
       </div>
       <div id="countdown" class="hide">
       </div>
+
      
 
       <div class="gameEnd hide">
         <div class="replay" onclick="gameOne()">Replay</div><br>
         <a href="/games"> Back to games list</a>
+        <div>time left:<div id="gameTime"></div></div>
+        <div>score<div id="score"></div></div>
+        <div>right:<div id="right"></div></div>
+        <div>wrong:<div id="wrong"></div></div>
       </div>
     </div>
     
@@ -92,15 +103,12 @@
       <div id="five" class="square"></div>
       <div id="six" class="square"></div>
     </div>
-    <div>time left:<div id="gameTime"></div></div>
-    <div>score<div id="score"></div></div>
-    <div>right:<div id="right"></div></div>
-    <div>wrong:<div id="wrong"></div></div>
+
 
 
   <script src="/socket.io/socket.io.js"></script>
 
-  <script type="text/javascript" src="../jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="../jquery-qrcode-0.14.0/jquery-qrcode-0.14.0.min.js"></script>
   <script type="text/javascript" src="../javascripts/main.js"></script>
 
