--- a/public/stylesheets/rotatingCubes.css
+++ b/public/stylesheets/rotatingCubes.css
@@ -15,30 +15,46 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 5vh;
+  line-height: 65px;
+  text-align: center;
+}
+}
+
 p {
   font-family: 'Vollkorn', serif;
   font-size: 16px;
   line-height: 25px;
 }
 
+
 #openingScreen {
   background: #d3d3d3;
   height: 90vh;
   width: 90vw;
-  position: absolute;
-  margin: 1% 0 0 5%
+
+  margin: 4vh auto;
+  padding: 0 3vw;
 
 }
 
-#qrcode {
+.column {
+  float: left;
+  width:60%;
+  border: 5px solid #000;
+}
+
+
+
+.qrcode {
   background-color: #fff;
   width:20vw;
   padding: 3vh;
 }
 
-#webAddress {
 
-}
 
 .hide {
   display: none;
